# General-Knowledge-Fact-Verification-with-Knowledge-Graphs

./: .gitignore  KernelKG_GPT_Kaggle.ipynb  KernelKG_GPT_Stage12_API.ipynb  KernelKG_GPT_Stage12_Colab.ipynb  KernelKG_GPT_Stage3_Colab.ipynb  README.md  REPORT.md  build_colab_notebook.py  build_notebook.py  build_stage12_notebook.py  build_stage3_colab_notebook.py  requirements.txt
BERT-Base/: bert_classification.py  flan_xl_zeroshot.py
Baseline/: index.html
Craw data/: crawl.ipynb
Demo_SimGRAG/: README.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  run_log.txt  subgraph_preview.md  test_rag.py
Demo_SimGRAG/BE/app/: main.py
Demo_SimGRAG/BE/app/api/: endpoints.py
Demo_SimGRAG/BE/app/core/: config.py
Demo_SimGRAG/BE/app/domain/: schemas.py
Demo_SimGRAG/BE/app/infrastructure/: milvus_adapter.py  neo4j_adapter.py  ollama_adapter.py  simgrag_adapter.py  simgrag_retriever.py
Demo_SimGRAG/BE/app/use_cases/: qa_usecase.py  simgrag_retriever.py
Demo_SimGRAG/Data_Pipeline/: 0_download_data.py  1_extract_triplets.py  2_vectorize_embeddings.py  3_load_to_db.py  4_embed_relations.py  5_list_collections.py  README.md
Demo_SimGRAG/FE/: app.py
Demo_SimGRAG/configs/: simgrag_config.json
PGR/: .gitignore  README.md  evaluate_pgr.py  test_api.py
SimGRAG/: README.md
claim_only/: bert_classification.py
configs/: default.yaml
scripts/: 01_run_stage12.py  02_train_stage3.py  03_evaluate.py  04_ablation.py
stage12/: __init__.py  adapter.py  triple_pool_builder.py
stage3/: __init__.py  data.py  graph_builder.py  losses.py  model.py  (+1 more)
(+59 files in other folders)
